2.0
	+ Zentyal rebrand
	+ Fixed problems with special characters in passwords
	+ Check that size of secret key is 16 characters
1.4
	+ Initial release